--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.1.0",
     "laravel-elixir": "^6.0.0-11",
     "laravel-elixir-browserify-official": "^0.1.3",
+    "laravel-elixir-browsersync": "^0.1.5",
     "laravel-elixir-vueify": "^1.0.6",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2"
